# tl_parole_cpp

./: CMakeLists.txt  README.md  dtw.cpp  dtw.hpp  main.cpp  melfilter.cpp  melfilter.hpp  mfcc.cpp  mfcc.hpp  parameters.hpp  test.cpp
